syntax = "proto3";
package subnet_dpn.stream_payload;

message ProtoStreamPayload {
  string origin_topic = 1;
  uint64 stream_id = 2;
  uint64 duration = 3;
  bytes payload = 4;
}
